Add insert newsflash functionality.

--- a/app/src/main/res/layout/activity_newsflash.xml
+++ b/app/src/main/res/layout/activity_newsflash.xml
@@ -12,5 +12,31 @@
         android:id="@+id/newsflash_list"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
+        android:layout_above="@+id/newsflash_submit"
+        android:layout_marginBottom="10dp"
         tools:listitem="@android:layout/simple_list_item_1" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/newsflash_text"
+        android:hint="Newsflash"
+
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_toLeftOf="@+id/newsflash_submit"
+
+        />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Submit"
+        android:id="@+id/newsflash_submit"
+
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+
+        />
+
 </RelativeLayout>
