--- a/app/src/main/res/menu/menu_newsflash.xml
+++ b/app/src/main/res/menu/menu_newsflash.xml
@@ -8,5 +8,5 @@
         android:title="@string/logout"
         android:visible="true"
         android:orderInCategory="100"
-        app:showAsAction="always|withText"/>
+        app:showAsAction="never"/>
 </menu>
