--- a/app/src/main/res/layout/newsflash_item.xml
+++ b/app/src/main/res/layout/newsflash_item.xml
@@ -9,7 +9,8 @@
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="Title"
         android:id="@+id/item_title"
-        android:layout_gravity="center_horizontal" />
+        android:layout_gravity="center_horizontal"
+        android:textStyle="bold" />
 
     <TextView
         android:layout_width="wrap_content"
