--- a/app/src/main/res/layout/activity_newsflash.xml
+++ b/app/src/main/res/layout/activity_newsflash.xml
@@ -13,8 +13,7 @@
         android:id="@+id/newsflash_list"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_above="@+id/newsflash_submit"
         android:layout_marginBottom="10dp"
-        tools:listitem="@android:layout/simple_list_item_1" />
+        tools:listitem="@layout/newsflash_item" />
 
 </RelativeLayout>
