--- a/app/src/main/res/layout/activity_newsflash_admin.xml
+++ b/app/src/main/res/layout/activity_newsflash_admin.xml
@@ -6,27 +6,13 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.blueit.g1_chat.NewsflashActivity">
 
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/newsflash_text"
-        android:hint="Newsflash"
-
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_toLeftOf="@+id/newsflash_submit"
-
-        />
-
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Submit"
+        android:text="@string/create_newsflash"
         android:id="@+id/newsflash_submit"
-
+        android:layout_gravity="center"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-
-        />
+        android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
