--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -14,12 +14,18 @@
         android:id="@+id/imageView"
         android:background="@drawable/logo"
         android:layout_gravity="center_horizontal" />
+
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:id="@+id/name_text"
-        android:hint="@string/login_username" />
+        android:hint="@string/login_username"
+        android:singleLine="true"
+        android:focusable="true"
+        android:nextFocusUp="@+id/sign_in_button"
+        android:nextFocusForward="@+id/pass_text"
+        android:nextFocusDown="@+id/pass_text"/>
 
     <EditText
         android:layout_width="match_parent"
@@ -27,7 +33,12 @@
         android:inputType="textPassword"
         android:ems="10"
         android:id="@+id/pass_text"
-        android:hint="@string/login_password" />
+        android:hint="@string/login_password"
+        android:singleLine="true"
+        android:focusable="true"
+        android:nextFocusForward="@+id/sign_in_button"
+        android:nextFocusDown="@+id/sign_in_button"
+        android:nextFocusUp="@+id/name_text"/>
 
     <Button
         android:layout_width="fill_parent"
@@ -37,6 +48,10 @@
         android:id="@+id/sign_in_button"
         android:layout_gravity="center_horizontal"
         android:layout_weight="0.11"
-        android:background="#e1e1e1" />
+        android:background="#e1e1e1"
+        android:focusable="true"
+        android:nextFocusForward="@+id/name_text"
+        android:nextFocusDown="@+id/name_text"
+        android:nextFocusUp="@+id/pass_text"/>
 
 </LinearLayout>
