--- a/app/src/main/res/menu/menu_user.xml
+++ b/app/src/main/res/menu/menu_user.xml
@@ -3,8 +3,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.blueit.g1_chat.NewsflashActivity">
 
-    <item android:id="@+id/action_settings" android:title="@string/action_settings"
-        android:orderInCategory="100" app:showAsAction="never" />
+    <item android:id="@+id/action_news"
+        android:title="@string/logout"
+        android:visible="true"
+        android:orderInCategory="100"
+        app:showAsAction="never"/>
+
+    <item android:id="@+id/action_chat"
+        android:title="@string/chat"
+        android:visible="true"
+        android:orderInCategory="100"
+        app:showAsAction="never"/>
 
     <item android:id="@+id/action_logout"
         android:title="@string/logout"
