--- a/app/src/main/res/menu/menu_admin.xml
+++ b/app/src/main/res/menu/menu_admin.xml
@@ -2,6 +2,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools" tools:context="com.blueit.g1_chat.Activity">
 
+    <item android:id="@+id/action_admin"
+        android:title="@string/title_activity_admin"
+        android:visible="true"
+        android:orderInCategory="100"
+        app:showAsAction="never"/>
+
     <item android:id="@+id/action_user"
         android:title="@string/add_user"
         android:visible="true"
