--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -17,12 +17,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/name1_text"
+        android:singleLine="true"
         android:hint="@string/register_name" />
 
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/name_text"
+        android:singleLine="true"
         android:hint="@string/login_username" />
 
     <EditText
@@ -31,6 +33,7 @@
         android:inputType="textPassword"
         android:ems="10"
         android:id="@+id/pass_text"
+        android:singleLine="true"
         android:hint="@string/login_password" />
 
     <Button
