--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -7,20 +7,22 @@
     <ListView
         android:id="@+id/chat_list"
         android:transcriptMode="alwaysScroll"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
         android:layout_above="@+id/Send"
         android:layout_width="wrap_content"
         android:layout_height="match_parent" />
     <RelativeLayout
         android:id="@+id/Send"
         android:layout_alignParentBottom="true"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content" >
 
         <EditText
             android:id="@+id/chatText"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/chat_text"/>
+            android:layout_height="wrap_content"/>
 
         <Button
             android:id="@+id/chatButton"
