--- a/app/src/main/res/menu/menu_newsflash.xml
+++ b/app/src/main/res/menu/menu_newsflash.xml
@@ -11,4 +11,10 @@
         android:visible="true"
         android:orderInCategory="100"
         app:showAsAction="never"/>
+
+    <item android:id="@+id/action_chat"
+        android:title="@string/chat"
+        android:visible="true"
+        android:orderInCategory="100"
+        app:showAsAction="never"/>
 </menu>
