--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -12,7 +12,8 @@
         android:layout_alignParentRight="true"
         android:layout_above="@+id/Send"
         android:layout_width="wrap_content"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:stackFromBottom="true"/>
     <RelativeLayout
         android:id="@+id/Send"
         android:layout_alignParentBottom="true"
