--- a/app/src/main/res/layout/activity_create_newsflash.xml
+++ b/app/src/main/res/layout/activity_create_newsflash.xml
@@ -7,22 +7,28 @@
     tools:context="com.blueit.g1_chat.CreateNewsflashActivity">
 
     <EditText
+        style="@style/MyEditTextStyle"
+        android:layout_marginTop="100dip"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/create_newsflash_title"
         android:hint="@string/create_newsflash_title_hint" />
 
     <EditText
+        style="@style/MyEditTextStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/create_newsflash_content"
         android:hint="@string/create_newsflash_content_hint" />
 
     <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        style="@style/MyButton"
+        android:layout_width="200dip"
+        android:layout_height="30dip"
+        android:layout_marginTop="30dip"
         android:text="@string/create_newsflash_submit"
         android:id="@+id/create_newsflash_submit"
         android:layout_gravity="center_horizontal"/>
+
 
 </LinearLayout>
