--- a/app/src/main/res/layout/activity_newsflash.xml
+++ b/app/src/main/res/layout/activity_newsflash.xml
@@ -1,18 +1,20 @@
+<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:layout_height="match_parent"
     tools:context="com.blueit.g1_chat.NewsflashActivity"
     android:id="@+id/newsflash_layout">
 
     <ListView
-        android:layout_width="wrap_content"
+        style="@style/MyListViewStyle"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
         android:id="@+id/newsflash_list"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
         android:layout_marginBottom="10dp"
         tools:listitem="@layout/newsflash_item" />
 
