--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -11,21 +11,26 @@
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="@string/register_title"
         android:id="@+id/textView3"
-        android:layout_gravity="center_horizontal" />
+        android:layout_gravity="center_horizontal"
+        android:textColor="@color/white"/>
 
     <EditText
+        style="@style/MyEditTextStyle"
+        android:layout_marginTop="30dip"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/name1_text"
         android:hint="@string/register_name" />
 
     <EditText
+        style="@style/MyEditTextStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/name_text"
         android:hint="@string/login_username" />
 
     <EditText
+        style="@style/MyEditTextStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="textPassword"
@@ -34,8 +39,10 @@
         android:hint="@string/login_password" />
 
     <Button
+        style="@style/MyButton"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="30dip"
+        android:layout_marginTop="30dip"
         android:text="@string/register_button_submit"
         android:id="@+id/register_button"
         android:layout_gravity="center_horizontal"/>
