--- a/app/src/main/res/layout/activity_user_list.xml
+++ b/app/src/main/res/layout/activity_user_list.xml
@@ -1,16 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.blueit.g1_chat.UserListActivity">
+    android:layout_height="wrap_content"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    tools:context="com.blueit.g1_chat.UserListActivity"
+    >
 
     <TextView
+        style="@style/MyTextViewStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Name"
+        android:text="@string/name"
         android:id="@+id/static_name"
         android:textStyle="bold"
         android:layout_alignTop="@+id/static_username"
@@ -18,11 +25,12 @@
         android:layout_alignParentStart="true" />
 
     <TextView
+        style="@style/MyTextViewStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="82dp"
+        android:layout_marginLeft="75dp"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Username"
+        android:text="@string/username"
         android:id="@+id/static_username"
         android:textStyle="bold"
         android:layout_alignParentTop="true"
@@ -30,20 +38,40 @@
         android:layout_toEndOf="@+id/static_name"
         android:layout_marginTop="23dp" />
 
+    <View
+        android:layout_width="55dip"
+        android:layout_height="1px"
+        android:id="@+id/static_line1"
+        android:layout_marginLeft="10dip"
+        android:layout_marginRight="10dip"
+        android:background="@color/red"
+        android:layout_below="@+id/static_name"/>
+
+    <View
+        android:layout_width="100dip"
+        android:layout_height="1px"
+        android:background="@color/red"
+        android:layout_below="@+id/static_username"
+        android:layout_alignLeft="@+id/static_username"
+        android:layout_alignStart="@+id/static_username" />
+
     <ListView
+        android:listSelector="@android:color/transparent"
+        android:divider="@null"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
         android:id="@+id/user_listview"
         android:layout_below="@+id/static_name"
         tools:listitem="@layout/userlist_item"/>
+
     <Button
+        style="@style/MyButton"
         android:id="@+id/btn_reg_user"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="30dip"
         android:text="@string/reg_user"
-        android:layout_centerHorizontal="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="30dp"/>
+        android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
