--- a/app/src/main/res/layout/newsflash_item.xml
+++ b/app/src/main/res/layout/newsflash_item.xml
@@ -1,24 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <TextView
+        android:textColor="@color/grey"
+        android:textSize="20sp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="7dp"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="Title"
         android:id="@+id/item_title"
-        android:layout_gravity="center_horizontal"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
     <TextView
+        style="@style/MyTextViewStyle"
+        android:textSize="16sp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="7dp"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="Content"
         android:id="@+id/item_content"
-        android:layout_gravity="center_horizontal" />
+        android:layout_below="@+id/item_title"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
-
-</LinearLayout>
+</RelativeLayout>
