--- a/app/src/main/res/layout/userlist_item.xml
+++ b/app/src/main/res/layout/userlist_item.xml
@@ -3,6 +3,7 @@
     android:layout_width="fill_parent" android:layout_height="match_parent">
 
     <TextView
+        style="@style/MyTextViewStyle"
         android:layout_width="120dip"
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
@@ -14,9 +15,12 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
+        android:drawableLeft="@drawable/bullet"
+        android:drawablePadding="8dp"
         />
 
     <TextView
+        style="@style/MyTextViewStyle"
         android:layout_width="120dip"
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
