--- a/app/src/main/res/layout/activity_edit.xml
+++ b/app/src/main/res/layout/activity_edit.xml
@@ -26,7 +26,7 @@ android:orientation="horizontal" >
     android:id="@+id/send_button"
     android:layout_width="wrap_content"
     android:layout_height="30dip"
-    android:text="@string/title_activity_edit"
+    android:text="@string/save_button"
     android:layout_marginTop="35dp"
     android:layout_below="@+id/edit_message"
     android:layout_centerHorizontal="true"/>
