--- a/app/src/main/res/layout/activity_channel_list.xml
+++ b/app/src/main/res/layout/activity_channel_list.xml
@@ -8,7 +8,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
-    tools:context="com.blueit.g1_chat.SelectChatRoomActivity"
+    tools:context="com.blueit.g1_chat.ChannelListActivity"
     >
 
     <TextView
