--- a/app/src/main/res/layout/activity_channel_list.xml
+++ b/app/src/main/res/layout/activity_channel_list.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-
     xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
@@ -11,43 +10,16 @@
     tools:context="com.blueit.g1_chat.ChannelListActivity"
     >
 
-    <TextView
-        style="@style/MyTextViewStyle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="@string/name"
-        android:id="@+id/static_name"
-        android:textStyle="bold"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
-
-    <View
-        android:layout_width="55dip"
-        android:layout_height="1px"
-        android:id="@+id/static_line1"
-        android:layout_marginLeft="10dip"
-        android:layout_marginRight="10dip"
-        android:background="@color/red"
-        android:layout_below="@+id/static_name"/>
-
-    <View
-        android:layout_width="100dip"
-        android:layout_height="1px"
-        android:background="@color/red" />
-
     <ListView
-        style="@style/MyTextViewStyle"
+        style="@style/MyListViewStyle"
         android:listSelector="@android:color/transparent"
-        android:divider="@null"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="fill_parent"
         android:layout_marginTop="5dp"
         android:id="@+id/channel_listview"
-        android:layout_below="@+id/static_name"
         android:layout_above="@+id/btn_add_channel"
-        tools:listitem="@android:layout/simple_list_item_1" />
+        tools:listitem="@layout/channel_item"
+        android:choiceMode="singleChoice" />
 
     <Button
         style="@style/MyButton"
@@ -56,6 +28,8 @@
         android:layout_height="30dip"
         android:text="@string/create_channel"
         android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="15dp" />
 
 </RelativeLayout>
