--- a/app/src/main/res/layout/activity_create_channel.xml
+++ b/app/src/main/res/layout/activity_create_channel.xml
@@ -20,7 +20,7 @@ android:orientation="horizontal" >
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_centerInParent="true"
-    android:hint="@string/edit_message" />
+    android:hint="@string/channel_name" />
 <Button
     style="@style/MyButton"
     android:id="@+id/send_button"
