--- a/app/src/main/res/layout/activity_newsflash.xml
+++ b/app/src/main/res/layout/activity_newsflash.xml
@@ -8,7 +8,7 @@
     <ListView
         style="@style/MyListViewStyle"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="fill_parent"
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:paddingTop="@dimen/activity_vertical_margin"
         android:paddingBottom="@dimen/activity_vertical_margin"
