--- a/app/src/main/res/layout/activity_admin.xml
+++ b/app/src/main/res/layout/activity_admin.xml
@@ -1,47 +1,61 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:background="@drawable/michel"
-    tools:context="com.blueit.g1_chat.AdminActivity">
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/add_user"
-        android:id="@+id/btn_add_user"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="51dp"
-        android:layout_marginLeft="43dp"
-        android:layout_marginStart="43dp"
-        android:layout_alignParentTop="true"
-        android:layout_alignLeft="@+id/textView"
-        android:layout_alignStart="@+id/textView" />
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
-    <Button
+    <ImageView
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:id="@+id/admin_background"
+        android:adjustViewBounds="false"
+        android:src="@drawable/michel"
+        android:scaleType="centerCrop"/>
 
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/add_news"
-        android:id="@+id/btn_add_news"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginLeft="45dp"
-        android:layout_marginStart="45dp"
-        android:layout_alignTop="@+id/btn_add_user"
-        android:layout_toRightOf="@+id/btn_add_user"
-        android:layout_toEndOf="@+id/btn_add_user" />
+    <RelativeLayout android:layout_width="match_parent"
+        android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        tools:context="com.blueit.g1_chat.AdminActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp"
-        android:text="Master Michel, what do you want to add?"
-        android:id="@+id/textView"
-        android:textSize="18dp"
-        android:layout_above="@+id/btn_add_news"
-        android:layout_centerHorizontal="true"
-        android:textStyle="bold" />
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/add_user"
+            android:id="@+id/btn_add_user"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="51dp"
+            android:layout_marginLeft="43dp"
+            android:layout_marginStart="43dp"
+            android:layout_alignParentTop="true"
+            android:layout_alignLeft="@+id/textView"
+            android:layout_alignStart="@+id/textView" />
 
-</RelativeLayout>
+        <Button
+
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/add_news"
+            android:id="@+id/btn_add_news"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginLeft="45dp"
+            android:layout_marginStart="45dp"
+            android:layout_alignTop="@+id/btn_add_user"
+            android:layout_toRightOf="@+id/btn_add_user"
+            android:layout_toEndOf="@+id/btn_add_user" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
+            android:text="Master Michel, what do you want to add?"
+            android:id="@+id/textView"
+            android:textSize="18dp"
+            android:layout_above="@+id/btn_add_news"
+            android:layout_centerHorizontal="true"
+            android:textStyle="bold" />
+
+    </RelativeLayout>
+
+</FrameLayout>
