--- a/app/src/main/res/layout/activity_user_list.xml
+++ b/app/src/main/res/layout/activity_user_list.xml
@@ -33,10 +33,9 @@
         android:text="@string/username"
         android:id="@+id/static_username"
         android:textStyle="bold"
-        android:layout_alignParentTop="true"
         android:layout_toRightOf="@+id/static_name"
         android:layout_toEndOf="@+id/static_name"
-        android:layout_marginTop="23dp" />
+        android:layout_alignParentTop="true" />
 
     <View
         android:layout_width="55dip"
@@ -57,14 +56,15 @@
 
     <ListView
         android:listSelector="@android:color/transparent"
+        android:transcriptMode="alwaysScroll"
         android:divider="@null"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
+        android:layout_height="fill_parent"
         android:id="@+id/user_listview"
-        android:layout_below="@+id/static_name"
-        tools:listitem="@layout/userlist_item"/>
-
+        tools:listitem="@layout/userlist_item"
+        android:layout_below="@+id/static_line1"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
     <Button
         style="@style/MyButton"
         android:id="@+id/btn_reg_user"
